*Fixed hardware problem with hall sensor  *Shorter delay (relay)  *Delete LCD widget

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,12 @@ platform = espressif8266
 board = nodemcu
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
+
 # OTA
 upload_protocol = espota
-upload_port = 192.168.1.97
+upload_port = 192.168.0.101
 # USB
 #upload_protocol = esptool
-#upload_port = /dev/cu.SLAB_USBtoUART
+#upload_port = /dev/tty.wchusbserial1410
 #upload_speed = 115200
-board_build.flash_mode = dout
+#board_build.flash_mode = dout
